Added the tweet button and formatted it

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 		<a href='http://jsfiddle.net/' target='_blank'>
 			<img src='icon-inverted.png' alt='jsFiddle' />
 			<h1>jsFiddle</h1>
+			<div class='tweet-container'><a href="http://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/hoeeafhdpifikmfdapokkjkcpijlbhne" data-text="The jsFiddle Chrome extension - Grab it from the Chrome web store!" data-count="horizontal" data-via="OliverCaldwell">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></div>
 		</a>
 	</div>
 	
