--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,7 @@
 				</optgroup>
 				
 				<optgroup label='jQuery'>
+					<option value='jquery/1.5'>jQuery 1.5</option>
 					<option value='jquery/1.4.4'>jQuery 1.4.4</option>
 					<option value='jquery/1.4.3'>jQuery 1.4.3</option>
 					<option value='jquery/1.3.2'>jQuery 1.3.2</option>
