Fixed a syntax error, updated Spark to v2.3.3, updated version in manifest to v1.7.5 and changed the src of the script tags to point to the new spark

--- a/popup.html
+++ b/popup.html
@@ -112,5 +112,5 @@
 	</div>
 </div>
 
-<script type='text/javascript' src='Spark-v2.0.0.js'></script>
+<script type='text/javascript' src='spark.js'></script>
 <script type='text/javascript' src='main.js'></script>
