Moved the JavaScript to the assets folder

--- a/popup.html
+++ b/popup.html
@@ -159,7 +159,7 @@
 		
 		<div id='status'></div>
 		
-		<script type='text/javascript' src='js/spark.js'></script>
-		<script type='text/javascript' src='js/script.js'></script>
+		<script type='text/javascript' src='assets/javascript/spark.js'></script>
+		<script type='text/javascript' src='assets/javascript/script.js'></script>
 	</body>
 </html>
