--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 		<title>jsFiddle - The Chrome Extension</title>
 		<meta charset='utf-8'>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' /> 
-		<link rel='stylesheet' type='text/css' href='css/style.css' /> 
+		<link rel='stylesheet' type='text/css' href='assets/style.css' /> 
 	</head>
 	
 	<body>
